// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eslint adapter — slice-internal sub-layer enforcement > matches the full snapshot for the slice-internal DDD spec (regression net) 1`] = `
"// AUTO-GENERATED by ori-arch — do not edit.
// Regenerate via the /ori-arch skill (Claude Code) — see .apm/skills/ori-arch/SKILL.md
// Source: .ori/architecture.md
//
// Usage: extend your eslint.config.js by spreading this array:
//   import oriArch from "./eslint.config.ori.js";
//   export default [...oriArch, /* your rules */];

import boundaries from "eslint-plugin-boundaries";

export default [
  {
    files: ["src/**/*.{ts,tsx,js,jsx,mts,cts,mjs,cjs}"],
    plugins: { boundaries },
    settings: {
      "boundaries/elements": [
  {
    "type": "shared",
    "pattern": "src/task-management/shared/**"
  },
  {
    "type": "ui-widget",
    "pattern": "src/ui-widget/**"
  },
  {
    "type": "ui-page",
    "pattern": "src/ui-page/**"
  },
  {
    "type": "domain",
    "pattern": "src/task-management/slices/*/*/**",
    "capture": [
      "sliceName",
      "subLayer"
    ]
  }
],
    },
    rules: {
      "boundaries/dependencies": [
        "error",
        {
          default: "disallow",
          rules: [
  {
    "from": {
      "type": "ui-page"
    },
    "allow": [
      {
        "to": {
          "type": "ui-widget"
        }
      },
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain"
        }
      }
    ]
  },
  {
    "from": {
      "type": "ui-widget"
    },
    "allow": [
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain"
        }
      }
    ]
  },
  {
    "from": {
      "type": "domain",
      "captured": {
        "subLayer": "domain"
      }
    },
    "allow": [
      {
        "to": {
          "type": "shared"
        }
      }
    ]
  },
  {
    "from": {
      "type": "domain",
      "captured": {
        "subLayer": "application"
      }
    },
    "allow": [
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain",
          "captured": {
            "sliceName": "{{from.sliceName}}",
            "subLayer": "domain"
          }
        }
      }
    ]
  },
  {
    "from": {
      "type": "domain",
      "captured": {
        "subLayer": "infrastructure"
      }
    },
    "allow": [
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain",
          "captured": {
            "sliceName": "{{from.sliceName}}",
            "subLayer": "domain"
          }
        }
      }
    ]
  },
  {
    "from": {
      "type": "domain",
      "captured": {
        "subLayer": "presentation"
      }
    },
    "allow": [
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain",
          "captured": {
            "sliceName": "{{from.sliceName}}",
            "subLayer": "application"
          }
        }
      },
      {
        "to": {
          "type": "domain",
          "captured": {
            "sliceName": "{{from.sliceName}}",
            "subLayer": "domain"
          }
        }
      }
    ]
  },
  {
    "from": {
      "type": "domain",
      "captured": {
        "subLayer": "tests"
      }
    },
    "allow": [
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain",
          "captured": {
            "sliceName": "{{from.sliceName}}",
            "subLayer": "domain"
          }
        }
      },
      {
        "to": {
          "type": "domain",
          "captured": {
            "sliceName": "{{from.sliceName}}",
            "subLayer": "application"
          }
        }
      },
      {
        "to": {
          "type": "domain",
          "captured": {
            "sliceName": "{{from.sliceName}}",
            "subLayer": "infrastructure"
          }
        }
      },
      {
        "to": {
          "type": "domain",
          "captured": {
            "sliceName": "{{from.sliceName}}",
            "subLayer": "presentation"
          }
        }
      }
    ]
  },
  {
    "from": {
      "type": "shared"
    },
    "allow": []
  }
],
        },
      ],
      "boundaries/no-private": ["error", { allowUncles: true }],
      "boundaries/no-unknown": "off",
    },
  },
  ...[],
];
"
`;

exports[`eslint adapter — template + injection integration > matches the full snapshot for the canonical TS spec (regression net) 1`] = `
"// AUTO-GENERATED by ori-arch — do not edit.
// Regenerate via the /ori-arch skill (Claude Code) — see .apm/skills/ori-arch/SKILL.md
// Source: .ori/architecture.md
//
// Usage: extend your eslint.config.js by spreading this array:
//   import oriArch from "./eslint.config.ori.js";
//   export default [...oriArch, /* your rules */];

import boundaries from "eslint-plugin-boundaries";

export default [
  {
    files: ["src/**/*.{ts,tsx,js,jsx,mts,cts,mjs,cjs}"],
    plugins: { boundaries },
    settings: {
      "boundaries/elements": [
  {
    "type": "shared",
    "pattern": "src/lib/shared/**"
  },
  {
    "type": "ui-entity",
    "pattern": "src/ui-entity/**"
  },
  {
    "type": "ui-feature",
    "pattern": "src/ui-feature/**"
  },
  {
    "type": "ui-widget",
    "pattern": "src/ui-widget/**"
  },
  {
    "type": "ui-page",
    "pattern": "src/ui-page/**"
  },
  {
    "type": "domain",
    "pattern": "src/lib/*/**",
    "capture": [
      "sliceName"
    ]
  }
],
    },
    rules: {
      "boundaries/dependencies": [
        "error",
        {
          default: "disallow",
          rules: [
  {
    "from": {
      "type": "ui-page"
    },
    "allow": [
      {
        "to": {
          "type": "ui-widget"
        }
      },
      {
        "to": {
          "type": "ui-feature"
        }
      },
      {
        "to": {
          "type": "ui-entity"
        }
      },
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain"
        }
      }
    ]
  },
  {
    "from": {
      "type": "ui-widget"
    },
    "allow": [
      {
        "to": {
          "type": "ui-feature"
        }
      },
      {
        "to": {
          "type": "ui-entity"
        }
      },
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain"
        }
      }
    ]
  },
  {
    "from": {
      "type": "ui-feature"
    },
    "allow": [
      {
        "to": {
          "type": "ui-entity"
        }
      },
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain"
        }
      }
    ]
  },
  {
    "from": {
      "type": "ui-entity"
    },
    "allow": [
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain"
        }
      }
    ]
  },
  {
    "from": {
      "type": "domain"
    },
    "allow": [
      {
        "to": {
          "type": "shared"
        }
      },
      {
        "to": {
          "type": "domain",
          "captured": {
            "sliceName": "{{from.sliceName}}"
          }
        }
      }
    ]
  },
  {
    "from": {
      "type": "shared"
    },
    "allow": []
  }
],
        },
      ],
      "boundaries/no-private": ["error", { allowUncles: true }],
      "boundaries/no-unknown": "off",
    },
  },
  ...[],
];
"
`;
